tests/invalid/numbers/no_semicolon.rs
/*
fail: 1
*/

main(): fail {
    return 0
}
